# flashmind-auth

./: .dockerignore  .env.dev.example  .env.dev.example   .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_01_02_1605-ebfe604dd94c_create_users_table.py
cli/: main.py
src/: main.py
src/application/: exceptions.py
src/application/dtos/: __init__.py  auth_credentials_dto.py  auth_response_dto.py  verify_code_dto.py
src/application/interfaces/: __init__.py  authentication_service.py  email_sender.py  hasher.py  jwt_service.py  password_hasher.py  rate_limit_repository.py  refresh_token_repository.py  unit_of_work.py  user_repository.py  verification_code_repository.py
src/application/use_cases/: __init__.py  finish_registration.py  initiate_registration.py  login.py  resend_registration_code.py
src/config/: settings.py
src/core/logging/: config.py
src/core/middleware/: logging_middleware.py
src/core/settings/: __init__.py  cors.py  database.py  email.py  jwt.py  rabbit.py  rate_limit.py  redis.py  verification_code.py
src/domain/: exceptions.py
src/domain/entities/: user.py
src/domain/value_objects/: __init__.py  email.py  hashed_password.py
src/infrastructure/db/: db_helper.py
src/infrastructure/di/: container.py
src/infrastructure/models/: user.py
src/infrastructure/persistence/: unit_of_work.py
src/infrastructure/rabbit/: __init__.py  connection.py  models.py  publisher.py
src/infrastructure/redis/: client.py
src/presentation/: exception_handlers.py
src/secure/: authentication_service.py  authlib_service.py  dependencies.py
tests/: test_api.py
(+54 files in other folders)
