[project]
name = "flashmind_auth"
version = "0.0.1"
description = ""
authors = [
    {name = "LazyFoxx",email = "chernomor987654321@gmail.com"}
]
readme = "README.md"
python = "=^3.13"
dependencies = [
    "fastapi (>=0.124.4,<0.125.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[argon2] (>=1.7.4,<2.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.9,<0.15.0)",
    "black (>=25.12.0,<26.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pre-commit (>=4.5.0,<5.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]


[tool.poetry]
name = "flashmind"
version = "0.1.0"
description = "Anki-like flashcards backend"
authors = ["name = LazyFoxx,email = chernomor987654321@gmail.com"]
readme = "README.md"
packages = [{include = "src"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"

[tool.taskipy.tasks]
dev = "uvicorn src.main:app --reload"
start = "uvicorn src.main:app --host 0.0.0.0 --port 8000"
tests = "pytest -v -s"

[tool.mypy]
explicit_package_bases = true
